--- a/package.json
+++ b/package.json
@@ -3,20 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.0.2",
     "@material-ui/core": "^3.6.0",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "chart.js": "^2.7.3",
+    "date-fns": "^2.0.0-alpha.21",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
+    "keycloak-connect": "^4.8.3",
+    "keycloak-js": "^4.8.3",
+    "material-ui-pickers": "^2.1.2",
+    "qs": "^6.6.0",
     "react": "^16.6.3",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.6.3",
-    "react-redux": "^5.0.7",
+    "react-infinite-scroller": "^1.2.4",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "react-test-renderer": "^16.6.3",
-    "redux": "^4.0.1"
+    "react-toastify": "^4.5.2",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
