--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "date-fns": "^2.0.0-alpha.21",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
-    "keycloak-connect": "^4.8.3",
     "keycloak-js": "^4.8.3",
     "material-ui-pickers": "^2.1.2",
+    "moment": "^2.24.0",
     "qs": "^6.6.0",
     "react": "^16.6.3",
     "react-chartjs-2": "^2.7.4",
